--- a/index.html
+++ b/index.html
@@ -1,15 +1,11 @@
-<HTML>
-
-<Head>
-
-<title>mayz.rip</title>
-
-</Head>
-
-<body>
-
-<p> This is the start of something new </p>
-
-</body>
-
-</HTML>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>juan's super cool blog</title>
+  </head>
+  <body style="background: #000; color: #fff; background-image: url('./media/shaggy.gif');">
+    <a href="./qna.html"> Ask me Anything </a>
+      <h1 style="text-align: center; font-size: 100px">W E L C O M E</h1>
+<!--><img src="./media/shaggy.gif"/><-->
+  </body>
+</html>
